[package]
name = "ComplexNum"
version = "0.1.0"
authors = ["maheen <maheensaleh@yahoo.com>"]
edition = "2018"
license = "MIT"
description=" a library for performing operations on ComplexNumbers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
